// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CardImageCap /> renders with loading equals lazy 1`] = `
<div
  className="pgn__card-wrapper-image-cap vertical"
>
  <span
    aria-busy={true}
    aria-live="polite"
    className="pgn__card-image-cap-loader show"
  >
    <span
      className="react-loading-skeleton"
      style={
        Object {
          "height": 140,
        }
      }
    >
      ‌
    </span>
    <br />
  </span>
  <img
    className="pgn__card-image-cap"
    loading="lazy"
  />
  <span
    aria-busy={true}
    aria-live="polite"
    className="pgn__card-logo-cap show"
  >
    <span
      className="react-loading-skeleton"
      style={
        Object {
          "height": 41,
        }
      }
    >
      ‌
    </span>
    <br />
  </span>
  <img
    alt="Logo alt"
    className="pgn__card-logo-cap"
    loading="lazy"
  />
</div>
`;

exports[`<CardImageCap /> renders with scr prop and srcAlt 1`] = `
<div
  className="pgn__card-wrapper-image-cap vertical"
>
  <span
    aria-busy={true}
    aria-live="polite"
    className="pgn__card-image-cap-loader show"
  >
    <span
      className="react-loading-skeleton"
      style={
        Object {
          "height": 140,
        }
      }
    >
      ‌
    </span>
    <br />
  </span>
  <img
    alt="Alt text"
    className="pgn__card-image-cap"
    loading="eager"
  />
</div>
`;

exports[`<CardImageCap /> renders with scr prop in horizontal orientation 1`] = `
<div
  className="pgn__card-wrapper-image-cap horizontal"
>
  <span
    aria-busy={true}
    aria-live="polite"
    className="pgn__card-image-cap-loader show"
  >
    <span
      className="react-loading-skeleton"
      style={
        Object {
          "height": "100%",
        }
      }
    >
      ‌
    </span>
    <br />
  </span>
  <img
    className="pgn__card-image-cap"
    loading="eager"
  />
</div>
`;

exports[`<CardImageCap /> renders with src and logoSrc prop in horizontal orientation 1`] = `
<div
  className="pgn__card-wrapper-image-cap horizontal"
>
  <span
    aria-busy={true}
    aria-live="polite"
    className="pgn__card-image-cap-loader show"
  >
    <span
      className="react-loading-skeleton"
      style={
        Object {
          "height": "100%",
        }
      }
    >
      ‌
    </span>
    <br />
  </span>
  <img
    className="pgn__card-image-cap"
    loading="eager"
  />
  <span
    aria-busy={true}
    aria-live="polite"
    className="pgn__card-logo-cap show"
  >
    <span
      className="react-loading-skeleton"
      style={
        Object {
          "height": 41,
        }
      }
    >
      ‌
    </span>
    <br />
  </span>
  <img
    className="pgn__card-logo-cap"
    loading="eager"
  />
</div>
`;

exports[`<CardImageCap /> renders with src, logoSrc and logoAlt props 1`] = `
<div
  className="pgn__card-wrapper-image-cap vertical"
>
  <span
    aria-busy={true}
    aria-live="polite"
    className="pgn__card-image-cap-loader show"
  >
    <span
      className="react-loading-skeleton"
      style={
        Object {
          "height": 140,
        }
      }
    >
      ‌
    </span>
    <br />
  </span>
  <img
    className="pgn__card-image-cap"
    loading="eager"
  />
  <span
    aria-busy={true}
    aria-live="polite"
    className="pgn__card-logo-cap show"
  >
    <span
      className="react-loading-skeleton"
      style={
        Object {
          "height": 41,
        }
      }
    >
      ‌
    </span>
    <br />
  </span>
  <img
    alt="Logo alt"
    className="pgn__card-logo-cap"
    loading="eager"
  />
</div>
`;
